--- a/HSPDemo.html
+++ b/HSPDemo.html
@@ -45,6 +45,6 @@
 </div>
 
 </body>
-<script type="text/javascript" src="UsefulFunctions.js"></script>
-<script type="text/javascript" src="HSP.js"></script>
+<script type="text/javascript" src="HSPFunctions.js"></script>
+<script type="text/javascript" src="HSPDemo.js"></script>
 </html>
